--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/YOUR_USERNAME/uppies.git"
+    "url": "git+https://github.com/bradcypert/uppies.git"
   },
   "keywords": [
     "update",
@@ -23,9 +23,9 @@
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/YOUR_USERNAME/uppies/issues"
+    "url": "https://github.com/bradcypert/uppies/issues"
   },
-  "homepage": "https://github.com/YOUR_USERNAME/uppies#readme",
+  "homepage": "https://github.com/bradcypert/uppies#readme",
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^7.1.0",
