--- a/.releaserc.json
+++ b/.releaserc.json
@@ -50,13 +50,13 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "node scripts/update-zig-version.js ${nextRelease.version}"
+        "prepareCmd": "node scripts/update-cargo-version.js ${nextRelease.version}"
       }
     ],
     [
       "@semantic-release/git",
       {
-        "assets": ["CHANGELOG.md", "build.zig.zon"],
+        "assets": ["CHANGELOG.md", "Cargo.toml", "Cargo.lock"],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
