--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.101"
+dirs = "6"
 clap = { version = "4.5.59", features = ["derive"] }
 semver = "1.0.27"
 serde = { version = "1.0.228", features = ["derive"] }
